Add calculation of pixel-wise weight maps and adapt dataset to support them

--- a/reports/presentation.ipynb
+++ b/reports/presentation.ipynb
@@ -41,11 +41,13 @@
    },
    "source": [
     "## <img src=\"figures/pytorch.svg\" style=\"height: 1em;\">\n",
-    "- Free and open-source machine learning framework originally developed by Meta AI, now part of the Linux Foundation\n",
+    "- Free and open-source machine learning framework with Python frontend\n",
+    "- Originally developed by Meta AI, now part of the Linux Foundation\n",
     "<figure style=\"width: 80%\">\n",
     "    <img src=\"figures/trends.png\">\n",
     "    <figcaption style=\"text-align: center; font-size: 0.4em; margin-top: -2em; color: rgba(0,0,0,0.5)\">https://paperswithcode.com/trends</figcaption>\n",
-    "</figure>"
+    "</figure>\n",
+    "- Trained models can be executed in Fiji using the deepImageJ plugin"
    ]
   },
   {
@@ -84,7 +86,8 @@
     "## Softmax\n",
     "$$\\mathbf{\\hat{y}} = \\mathrm{softmax}(\\mathbf{o}) \\ \\ \\mathrm{where} \\ \\ \\hat{y}_{i} = \\frac{\\mathrm{exp}(o_i)}{\\sum_{j} \\mathrm{exp}(o_{j})}$$\n",
     "- Maps vector of scores to probabilities\n",
-    "- Outputs are non-negative and sum up to 1"
+    "- Outputs are non-negative and sum up to 1\n",
+    "- Used for normalizing network outputs and attention scores in the attention mechanism"
    ]
   },
   {
@@ -218,9 +221,27 @@
    },
    "source": [
     "## Optimization\n",
-    "- Finding parameters that minimize the loss function: $\\mathbf{w}^{*},b^{*} = \\underset{\\mathbf{w},b}{\\operatorname{argmin}} L(\\mathbf{w},b)$\n",
+    "- Finding parameters that minimize the loss function: $\\mathbf{w}^{*} = \\underset{\\mathbf{w}}{\\operatorname{argmin}} L(\\mathbf{w})$\n",
     "- Various flavors of gradient descent\n",
-    "- In a nutshell, parameters are updated in the direction of the negative gradient by step size $\\eta$ (learning rate): $$(\\mathbf{w},b) \\gets (\\mathbf{w},b) - \\eta \\nabla L(\\mathbf{w},b)$$"
+    "- In a nutshell, parameters are updated in the direction of the negative gradient by step size $\\eta$ (learning rate):\n",
+    "$$\\mathbf{g}_t \\gets \\nabla_{\\mathbf{w}}L(\\mathbf{w}_{t-1})$$\n",
+    "$$\\mathbf{w}_t \\gets \\mathbf{w}_{t-1} - \\eta \\mathbf{g}_t$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Momentum\n",
+    "- Instantaneous gradient is replaced by an average over multiple past gradients\n",
+    "- Accelerates convergence\n",
+    "- Influence of past gradients is controlled with $\\beta$\n",
+    "$$\\mathbf{v}_t \\gets \\beta \\mathbf{v}_{t-1} + \\mathbf{g}_{t}$$\n",
+    "$$\\mathbf{w}_t \\gets \\mathbf{w}_{t-1} - \\eta \\mathbf{v}_t$$"
    ]
   },
   {
@@ -232,6 +253,20 @@
    },
    "source": [
     "## Regularization\n",
+    "### Weight decay\n",
+    "- Large weights are penalized by adding their squared $\\ell^2$ norm to the loss function\n",
+    "- Magnitude of the effect is controlled with the non-zero constant $\\lambda$\n",
+    "$$L_{new}(\\mathbf{w}) = L(\\mathbf{w}) + \\lambda \\left\\|\\mathbf{w}\\right\\|^2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Dropout\n",
     "- Activations of a layer are randomly zeroed at probability p and the remaining are normalized.\n",
     "- Prevents coadaptation. Used only during training.\n",
@@ -240,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1437,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -250,11 +285,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0.0000, 0.0000, 2.8214, 0.0000, 0.0000, 0.0000, 4.3314, 0.0000, 0.0000,\n",
-       "        4.1199])"
+       "tensor([3.8857, 0.0000, 0.0000, 0.0000, 3.7502, 0.0000, 4.1249, 0.0000, 0.0000,\n",
+       "        0.0000])"
       ]
      },
-     "execution_count": 1437,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
