Finish HPO scripts

--- a/notebooks/2-dataloader-test.ipynb
+++ b/notebooks/2-dataloader-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6551765203475952, 0.15311938524246216)"
+       "(0.679629385471344, 0.14512358605861664)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
     "import torchvision.transforms.v2 as T\n",
     "from src.data.loaders import TrivialAugmentWide\n",
     "\n",
-    "transforms = T.Compose([T.CenterCrop(500), TrivialAugmentWide(), T.ConvertDtype(), T.Normalize(mean=[0.6552], std=[0.1531])])\n",
+    "transforms = T.Compose([T.CenterCrop(500), TrivialAugmentWide(), T.ConvertDtype(), T.Normalize(mean=[MEAN], std=[STD])])\n",
     "\n",
     "dataset = MitoSemsegDataset(root=TRAIN_ROOT, transforms=transforms, weights=True)\n",
     "\n",
