--- a/reports/presentation.ipynb
+++ b/reports/presentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -55,12 +55,85 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## <img src=\"figures/opencv.svg\" style=\"height: 1em; display: inline; margin-bottom: 0.5em;\"> OpenCV\n",
+    "- Free and open-source computer vision library developed especially for real-time applications\n",
+    "- Written in C++ but has Python/Java/MATLAB interfaces\n",
+    "- Used for basic image processing in the project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Pytorch overview\n",
+    "### Tensor\n",
+    "- Fundamental class in pytorch\n",
+    "- Like matrices but with arbitrary number of dimensions. Similar to numpy's ndarray.\n",
+    "- Device where the tensor lives can be specified (cpu or cuda)\n",
+    "- __autograd__: tensors keep track of the computational graph that led to it and derivatives are computed automatically when the `backward()` method is called"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              x: tensor([0., 1., 2., 3., 4.], requires_grad=True)\n",
+      "      home of x: cpu\n",
+      "gradient of x⋅x: tensor([0., 2., 4., 6., 8.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "x = torch.arange(5.0, requires_grad=True)\n",
+    "print(f\"{'x:':>16}\", x)\n",
+    "print(f\"{'home of x:':>16}\", x.device)\n",
+    "\n",
+    "y = torch.dot(x,x)\n",
+    "y.backward()\n",
+    "print('gradient of x⋅x:', x.grad)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Neural network primitives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     },
     "tags": []
    },
    "source": [
     "## Multilayer perceptron\n",
-    "$\\hat{y} = \\mathbf{w}^\\top\\mathbf{x} + b$"
+    "$\\hat{y} = \\mathbf{w}^\\top\\mathbf{x} + b$\n",
+    "- Simplest deep networks"
    ]
   },
   {
@@ -118,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -131,22 +204,22 @@
      "output_type": "stream",
      "text": [
       "Raw network output\n",
-      " tensor([[[[ 1.1524,  0.0488, -0.4999,  0.8023],\n",
-      "          [-0.7808, -1.1410,  0.7125,  0.2363],\n",
-      "          [ 2.1573,  0.3931, -0.0271, -0.4595],\n",
-      "          [-1.0653, -0.7159, -0.8533, -0.9471]],\n",
+      " tensor([[[[ 0.4879, -0.7831, -0.1500, -1.0046],\n",
+      "          [-0.0444,  0.3142, -0.9193, -1.6877],\n",
+      "          [-3.4846, -0.3562, -0.0809, -0.7448],\n",
+      "          [ 0.9274, -1.5715,  1.6372,  1.4146]],\n",
       "\n",
-      "         [[ 0.6448,  0.5050,  0.8987,  0.8557],\n",
-      "          [ 0.7015,  0.3970, -1.1359,  0.9902],\n",
-      "          [ 0.3574, -1.0381, -0.2825,  0.2334],\n",
-      "          [ 1.5629,  1.8593,  0.0789, -0.1686]]]]) \n",
+      "         [[-1.2043,  1.1754, -0.2616,  0.5958],\n",
+      "          [ 0.1038, -1.1549,  0.2733,  1.2045],\n",
+      "          [-0.0820,  1.7601,  0.8902,  0.0218],\n",
+      "          [ 0.9582, -0.9739,  0.2744, -0.8210]]]]) \n",
       "Target labels\n",
-      " tensor([[[1, 0, 0, 1],\n",
-      "         [0, 0, 0, 0],\n",
-      "         [0, 0, 0, 0],\n",
-      "         [1, 0, 0, 1]]])\n",
+      " tensor([[[1, 1, 1, 0],\n",
+      "         [0, 0, 0, 1],\n",
+      "         [0, 1, 0, 0],\n",
+      "         [0, 1, 1, 0]]])\n",
       "Cross-entropy loss\n",
-      " tensor(0.9573)\n"
+      " tensor(0.9903)\n"
      ]
     }
    ],
@@ -163,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -176,37 +249,37 @@
      "output_type": "stream",
      "text": [
       "One-hot encoded target labels\n",
-      " tensor([[[[0., 1., 1., 0.],\n",
-      "          [1., 1., 1., 1.],\n",
-      "          [1., 1., 1., 1.],\n",
-      "          [0., 1., 1., 0.]],\n",
+      " tensor([[[[0, 0, 0, 1],\n",
+      "          [1, 1, 1, 0],\n",
+      "          [1, 0, 1, 1],\n",
+      "          [1, 0, 0, 1]],\n",
       "\n",
-      "         [[1., 0., 0., 1.],\n",
-      "          [0., 0., 0., 0.],\n",
-      "          [0., 0., 0., 0.],\n",
-      "          [1., 0., 0., 1.]]]])\n",
+      "         [[1, 1, 1, 0],\n",
+      "          [0, 0, 0, 1],\n",
+      "          [0, 1, 0, 0],\n",
+      "          [0, 1, 1, 0]]]])\n",
       "Normalized network outputs\n",
-      " tensor([[[[0.6243, 0.3879, 0.1980, 0.4867],\n",
-      "          [0.1851, 0.1768, 0.8639, 0.3200],\n",
-      "          [0.8581, 0.8071, 0.5635, 0.3334],\n",
-      "          [0.0673, 0.0708, 0.2825, 0.3146]],\n",
+      " tensor([[[[0.8445, 0.1236, 0.5279, 0.1679],\n",
+      "          [0.4630, 0.8129, 0.2328, 0.0525],\n",
+      "          [0.0322, 0.1075, 0.2747, 0.3172],\n",
+      "          [0.4923, 0.3549, 0.7962, 0.9034]],\n",
       "\n",
-      "         [[0.3757, 0.6121, 0.8020, 0.5133],\n",
-      "          [0.8149, 0.8232, 0.1361, 0.6800],\n",
-      "          [0.1419, 0.1929, 0.4365, 0.6666],\n",
-      "          [0.9327, 0.9292, 0.7175, 0.6854]]]])\n",
+      "         [[0.1555, 0.8764, 0.4721, 0.8321],\n",
+      "          [0.5370, 0.1871, 0.7672, 0.9475],\n",
+      "          [0.9678, 0.8925, 0.7253, 0.6828],\n",
+      "          [0.5077, 0.6451, 0.2038, 0.0966]]]])\n",
       "Cross-entropy loss\n",
-      " tensor(0.9573)\n"
+      " tensor(0.9903)\n"
      ]
     }
    ],
    "source": [
-    "classes = torch.arange(num_classes).reshape(1,2,1,1)\n",
-    "y = (groundtruth == classes).to(torch.float32)\n",
+    "from torch.nn.functional import one_hot, softmax\n",
+    "\n",
+    "y = one_hot(groundtruth).permute(0,3,1,2)\n",
     "print('One-hot encoded target labels\\n', y)\n",
     "\n",
-    "softmax = nn.Softmax(dim=1)\n",
-    "y_hat = softmax(logits)\n",
+    "y_hat = softmax(logits, dim=1)\n",
     "print('Normalized network outputs\\n', y_hat)\n",
     "ce_loss = (-y*torch.log(y_hat)).sum(dim=1).mean()\n",
     "print('Cross-entropy loss\\n', ce_loss)"
@@ -255,7 +328,7 @@
     "## Regularization\n",
     "### Weight decay\n",
     "- Large weights are penalized by adding their squared $\\ell^2$ norm to the loss function\n",
-    "- Magnitude of the effect is controlled with the non-zero constant $\\lambda$\n",
+    "- Magnitude of the effect is controlled with the constant $\\lambda$\n",
     "$$L_{new}(\\mathbf{w}) = L(\\mathbf{w}) + \\lambda \\left\\|\\mathbf{w}\\right\\|^2$$"
    ]
   },
@@ -275,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -285,18 +358,18 @@
     {
      "data": {
       "text/plain": [
-       "tensor([3.8857, 0.0000, 0.0000, 0.0000, 3.7502, 0.0000, 4.1249, 0.0000, 0.0000,\n",
+       "tensor([0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 4.8993, 2.4359,\n",
        "        0.0000])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "drout = nn.Dropout(p=0.8)\n",
-    "drout(torch.rand(10))"
+    "dropout = nn.Dropout(p=0.8)\n",
+    "dropout(torch.rand(10))"
    ]
   },
   {
@@ -307,11 +380,12 @@
     }
    },
    "source": [
-    "## Hyperparameter optimization\n",
+    "## Hyperparameter search\n",
     "- Model parameters = parameters that are updated in the training loop\n",
     "- Hyperparameters comprise all the other configurables that control the learning algorithm or the structure of the model\n",
-    "- Goal is to find hyperparameters that minimize validation error\n",
-    "- One job: define the configuration space over which to optimize"
+    "- Goal is to find hyperparameters that minimize validation loss\n",
+    "- User must define the configuration space over which to optimize\n",
+    "- There are software packages (Syne Tune, Ray Tune, Optuna...) that will handle the search for us and exploit parallelism"
    ]
   },
   {
@@ -323,7 +397,30 @@
    },
    "source": [
     "## Ray <img src=\"figures/tune.png\" style=\"margin-bottom: 1.5em; display: inline; height: 2em;\">\n",
-    "- llll"
+    "```python\n",
+    "from ray import tune\n",
+    "from ray.air import session\n",
+    "from tune.schedulers import ASHAScheduler\n",
+    "\n",
+    "def objective(config):\n",
+    "    # Training loop or something else\n",
+    "    session.report({\"loss\": loss})\n",
+    "\n",
+    "tuner = tune.Tuner(\n",
+    "    objective,\n",
+    "    tune_config=tune.TuneConfig(\n",
+    "        scheduler=ASHAScheduler(),\n",
+    "        metric=\"loss\",\n",
+    "        mode=\"min\",\n",
+    "        num_samples=10,\n",
+    "    ),\n",
+    "    param_space=search_space,\n",
+    ")\n",
+    "results = tuner.fit()\n",
+    "\n",
+    "best_result = results.get_best_result(\"loss\", \"min\")\n",
+    "print(f\"Best trial config: {best_result.config}\")\n",
+    "```"
    ]
   },
   {
@@ -334,6 +431,7 @@
     }
    },
    "source": [
+    "\n",
     "## Data augmentation\n",
     "- Training set is expanded by introducing random changes\n",
     "- Results in better generalization to unseen data\n",
@@ -448,7 +546,41 @@
     "## Ground truth labeling\n",
     "- Done in Microscopy Image Browser leveraging the Segment Anything Model (SAM)\n",
     "- Instance segmentation masks for mitochondria as 8-bit TIFF images where background pixels have intensity value 0 and mitochondria non-zero\n",
-    "- Magnifications 3000X/4000X/5000X. 128 images from Martin's MSc thesis. ~/Kristian/dataset/"
+    "- Magnifications 3000X/4000X/5000X\n",
+    "- 128 images from Martin's MSc thesis and 128 images from the Staffan Strömblad set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## puhti.csc.fi\n",
+    "- Work is submitted to the Slurm job scheduler using a batch job script that defines resources and commands to run\n",
+    "- Disk areas\n",
+    "    - `/projappl/project_2008180` for code\n",
+    "    - `/scratch/project_2008180` for datasets and computation outputs (temporary)\n",
+    "    - `$LOCAL_SCRATCH` fast storage on GPU nodes available during Slurm jobs if reserved with the `--gres` flag\n",
+    "- How to set up your files: `git clone` your code to `projappl`, `rsync` your data to `scratch` and in the job script `cp` the data to `$LOCAL_SCRATCH`\n",
+    "- Node is a single computer on the cluster. GPU nodes each have 4 GPUs (Nvidia Volta V100). A GPU has 32GB of memory.\n",
+    "- Using conda environments directly on the system not supported but they can be wrapped into Apptainer containers using tykky\n",
+    "- Easiest way to set up a Python environment is to use the preinstalled modules (Apptainers), e.g. pytorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### <span style=\"color: #888;\">puhti.csc.fi</font>\n",
+    "## Multi-GPU training with pytorch\n",
+    "- Wrapping a module in `torch.nn.DataParallel` will parallelize it in the batch dimension"
    ]
   }
  ],
