Small fixes to hpo scripts

--- a/notebooks/6-hpo-cristae.ipynb
+++ b/notebooks/6-hpo-cristae.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"tuneStatus\">\n",
+       "  <div style=\"display: flex;flex-direction: row\">\n",
+       "    <div style=\"display: flex;flex-direction: column;\">\n",
+       "      <h3>Tune Status</h3>\n",
+       "      <table>\n",
+       "<tbody>\n",
+       "<tr><td>Current time:</td><td>2023-08-23 08:07:32</td></tr>\n",
+       "<tr><td>Running for: </td><td>00:00:11.58        </td></tr>\n",
+       "<tr><td>Memory:      </td><td>5.6/13.6 GiB       </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n",
+       "    </div>\n",
+       "    <div class=\"vDivider\"></div>\n",
+       "    <div class=\"systemInfo\">\n",
+       "      <h3>System Info</h3>\n",
+       "      Using AsyncHyperBand: num_stopped=6<br>Bracket: Iter 64.000: None | Iter 16.000: None | Iter 4.000: None | Iter 1.000: 0.4622031530028106<br>Logical resource usage: 1.0/4 CPUs, 0/0 GPUs\n",
+       "    </div>\n",
+       "    \n",
+       "  </div>\n",
+       "  <div class=\"hDivider\"></div>\n",
+       "  <div class=\"trialStatus\">\n",
+       "    <h3>Trial Status</h3>\n",
+       "    <table>\n",
+       "<thead>\n",
+       "<tr><th>Trial name                         </th><th>status    </th><th>loc               </th><th style=\"text-align: right;\">  bhat_ksize</th><th style=\"text-align: right;\">  mask_ksize</th><th style=\"text-align: right;\">  threshold</th><th style=\"text-align: right;\">  upper_narrow</th><th style=\"text-align: right;\">  upper_wide</th><th style=\"text-align: right;\">  iter</th><th style=\"text-align: right;\">  total time (s)</th><th style=\"text-align: right;\">     iou</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00000</td><td>TERMINATED</td><td>10.112.15.14:88441</td><td style=\"text-align: right;\">          46</td><td style=\"text-align: right;\">          17</td><td style=\"text-align: right;\">         90</td><td style=\"text-align: right;\">            24</td><td style=\"text-align: right;\">          96</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        1.80937 </td><td style=\"text-align: right;\">0.348645</td></tr>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00001</td><td>TERMINATED</td><td>10.112.15.14:88440</td><td style=\"text-align: right;\">          27</td><td style=\"text-align: right;\">          47</td><td style=\"text-align: right;\">        118</td><td style=\"text-align: right;\">            26</td><td style=\"text-align: right;\">          76</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        1.65987 </td><td style=\"text-align: right;\">0.471543</td></tr>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00002</td><td>TERMINATED</td><td>10.112.15.14:88442</td><td style=\"text-align: right;\">          38</td><td style=\"text-align: right;\">          45</td><td style=\"text-align: right;\">        172</td><td style=\"text-align: right;\">            16</td><td style=\"text-align: right;\">          79</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        1.3562  </td><td style=\"text-align: right;\">0.489041</td></tr>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00003</td><td>TERMINATED</td><td>10.112.15.14:88443</td><td style=\"text-align: right;\">          20</td><td style=\"text-align: right;\">          25</td><td style=\"text-align: right;\">        192</td><td style=\"text-align: right;\">             7</td><td style=\"text-align: right;\">          65</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        0.835884</td><td style=\"text-align: right;\">0.426933</td></tr>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00004</td><td>TERMINATED</td><td>10.112.15.14:88443</td><td style=\"text-align: right;\">          25</td><td style=\"text-align: right;\">          15</td><td style=\"text-align: right;\">        119</td><td style=\"text-align: right;\">            22</td><td style=\"text-align: right;\">          58</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        1.74642 </td><td style=\"text-align: right;\">0.434183</td></tr>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00005</td><td>TERMINATED</td><td>10.112.15.14:88442</td><td style=\"text-align: right;\">          42</td><td style=\"text-align: right;\">          13</td><td style=\"text-align: right;\">        188</td><td style=\"text-align: right;\">             9</td><td style=\"text-align: right;\">          99</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        2.03185 </td><td style=\"text-align: right;\">0.36079 </td></tr>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00006</td><td>TERMINATED</td><td>10.112.15.14:88441</td><td style=\"text-align: right;\">          16</td><td style=\"text-align: right;\">          23</td><td style=\"text-align: right;\">        114</td><td style=\"text-align: right;\">            16</td><td style=\"text-align: right;\">          52</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        1.61131 </td><td style=\"text-align: right;\">0.340869</td></tr>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00007</td><td>TERMINATED</td><td>10.112.15.14:88440</td><td style=\"text-align: right;\">          37</td><td style=\"text-align: right;\">          47</td><td style=\"text-align: right;\">        183</td><td style=\"text-align: right;\">            22</td><td style=\"text-align: right;\">          82</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        1.45458 </td><td style=\"text-align: right;\">0.487708</td></tr>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00008</td><td>TERMINATED</td><td>10.112.15.14:88443</td><td style=\"text-align: right;\">          46</td><td style=\"text-align: right;\">          20</td><td style=\"text-align: right;\">        125</td><td style=\"text-align: right;\">            19</td><td style=\"text-align: right;\">          57</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        1.38141 </td><td style=\"text-align: right;\">0.426809</td></tr>\n",
+       "<tr><td>hpo_crista_segmentation_f0809_00009</td><td>TERMINATED</td><td>10.112.15.14:88442</td><td style=\"text-align: right;\">          15</td><td style=\"text-align: right;\">          49</td><td style=\"text-align: right;\">        180</td><td style=\"text-align: right;\">            18</td><td style=\"text-align: right;\">          99</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        1.45451 </td><td style=\"text-align: right;\">0.381616</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n",
+       "  </div>\n",
+       "</div>\n",
+       "<style>\n",
+       ".tuneStatus {\n",
+       "  color: var(--jp-ui-font-color1);\n",
+       "}\n",
+       ".tuneStatus .systemInfo {\n",
+       "  display: flex;\n",
+       "  flex-direction: column;\n",
+       "}\n",
+       ".tuneStatus td {\n",
+       "  white-space: nowrap;\n",
+       "}\n",
+       ".tuneStatus .trialStatus {\n",
+       "  display: flex;\n",
+       "  flex-direction: column;\n",
+       "}\n",
+       ".tuneStatus h3 {\n",
+       "  font-weight: bold;\n",
+       "}\n",
+       ".tuneStatus .hDivider {\n",
+       "  border-bottom-width: var(--jp-border-width);\n",
+       "  border-bottom-color: var(--jp-border-color0);\n",
+       "  border-bottom-style: solid;\n",
+       "}\n",
+       ".tuneStatus .vDivider {\n",
+       "  border-left-width: var(--jp-border-width);\n",
+       "  border-left-color: var(--jp-border-color0);\n",
+       "  border-left-style: solid;\n",
+       "  margin: 0.5em 1em 0.5em 1em;\n",
+       "}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-08-23 08:07:32,847\tINFO tune.py:1148 -- Total run time: 11.65 seconds (11.57 seconds for the tuning loop).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best trial config: {'mask_ksize': 45, 'bhat_ksize': 38, 'upper_narrow': 16, 'upper_wide': 79, 'threshold': 172}\n",
+      "Best trial IoU: 0.48904078116025274\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2 as cv\n",
     "import numpy as np\n",
@@ -69,7 +167,7 @@
     "    hpo_crista_segmentation,\n",
     "    param_space=config,\n",
     "    tune_config=tune.TuneConfig(\n",
-    "        num_samples=100,\n",
+    "        num_samples=10,\n",
     "        scheduler=ASHAScheduler(metric=\"iou\", mode=\"max\")),\n",
     "    run_config=air.RunConfig(storage_path=resultpath, name=\"crista\"),\n",
     ")\n",
@@ -83,8 +181,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "mitotem-kernel",
+   "language": "python",
+   "name": "mitotem-kernel"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
