--- a/reports/presentation.ipynb
+++ b/reports/presentation.ipynb
@@ -562,9 +562,9 @@
     "- Work is submitted to the Slurm job scheduler using a batch job script that defines resources and commands to run\n",
     "- Disk areas\n",
     "    - `/projappl/project_2008180` for code\n",
-    "    - `/scratch/project_2008180` for datasets and computation outputs (temporary)\n",
-    "    - `$LOCAL_SCRATCH` fast storage on GPU nodes available during Slurm jobs if reserved with the `--gres` flag\n",
-    "- How to set up your files: `git clone` your code to `projappl`, `rsync` your data to `scratch` and in the job script `cp` the data to `$LOCAL_SCRATCH`\n",
+    "    - `/scratch/project_2008180` for training data and computation outputs (temporary)\n",
+    "    - `$LOCAL_SCRATCH` fast storage on GPU nodes available during Slurm jobs if reserved with the `--gres` flag. Should be used for training data if it consists of thousands of small files (not the case here) \n",
+    "- How to set up files: `git clone` code to `projappl`, `rsync` data to `scratch`\n",
     "- Node is a single computer on the cluster. GPU nodes each have 4 GPUs (Nvidia Volta V100). A GPU has 32GB of memory.\n",
     "- Using conda environments directly on the system not supported but they can be wrapped into Apptainer containers using tykky\n",
     "- Easiest way to set up a Python environment is to use the preinstalled modules (Apptainers), e.g. pytorch"
