Make dataset early loading. Implement overlap tile strategy. Add training script for unet.

--- a/notebooks/3-cristae-segmentation.ipynb
+++ b/notebooks/3-cristae-segmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,8 +39,8 @@
     "from src.analysis.components import crop_all_mitos\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "dataset = MitoSemsegDataset(root=TRAIN_ROOT)\n",
-    "img, mask = dataset[81]"
+    "dataset = MitoSemsegDataset(root=TRAIN_ROOT, debug=True)\n",
+    "img, mask = dataset[0]"
    ]
   },
   {
@@ -51,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1254178ea102494e92bece3798e5b2f2",
+       "model_id": "031c3c8e38774350a425bab77a62650e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,13 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14d98a12576b40ed8d1b84ff07109ba9",
+       "model_id": "c30f0fcb250e45e89c0e85616f36f97d",
        "version_major": 2,
        "version_minor": 0
       },
