--- a/notebooks/4-pipeline-sandbox.ipynb
+++ b/notebooks/4-pipeline-sandbox.ipynb
@@ -15,9 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torchvision/datapoints/__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
+      "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torchvision/transforms/v2/__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -306,8 +316,8 @@
     "from src.analysis.components import get_mito_stats\n",
     "from src.visualization.analysis import show_mito_stats\n",
     "\n",
-    "dataset = MitoSemsegDataset(root=TRAIN_ROOT)\n",
-    "img, mask = dataset[81]\n",
+    "dataset = MitoSemsegDataset(root=TRAIN_ROOT, debug=True)\n",
+    "img, mask = dataset[0]\n",
     " \n",
     "stats = get_mito_stats(img,mask)\n",
     "display(stats)\n",
@@ -317,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,45 +341,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.002053388090349076, 'micron')\n",
-      "3.2048463821411133\n",
-      "(0.002053388090349076, 'micron')\n",
-      "2.952274799346924\n",
-      "(0.002053388090349076, 'micron')\n",
-      "2.974174737930298\n",
-      "(0.002053388090349076, 'micron')\n",
-      "2.931443214416504\n",
-      "(0.002053388090349076, 'micron')\n",
-      "3.0482490062713623\n",
-      "(0.002053388090349076, 'micron')\n",
-      "3.0029854774475098\n",
-      "(0.002053388090349076, 'micron')\n",
-      "2.9857547283172607\n",
       "(0.0016116035455278, 'micron')\n",
-      "2.90026593208313\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.913193464279175\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.940903425216675\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.95538592338562\n",
-      "(0.0016116035455278, 'micron')\n",
-      "3.0055155754089355\n",
-      "(0.0016116035455278, 'micron')\n",
-      "3.1136293411254883\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m image \u001b[39m=\u001b[39m (\u001b[39m255\u001b[39m\u001b[39m*\u001b[39mimg)\u001b[39m.\u001b[39msqueeze()\u001b[39m.\u001b[39mto(torch\u001b[39m.\u001b[39muint8)\u001b[39m.\u001b[39mnumpy()\n\u001b[1;32m      7\u001b[0m t \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m----> 8\u001b[0m \u001b[39mprint\u001b[39m(detect_scale(image, reader))\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(time\u001b[39m.\u001b[39mtime()\u001b[39m-\u001b[39mt)\n",
-      "File \u001b[0;32m/data/mole/katajisto/mitotem/src/analysis/components.py:17\u001b[0m, in \u001b[0;36mdetect_scale\u001b[0;34m(img, reader)\u001b[0m\n\u001b[1;32m     15\u001b[0m kwidth \u001b[39m=\u001b[39m \u001b[39mbin\u001b[39m\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m8\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[39m# use wide structuring element to erase everything but scalebar\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m scalebar \u001b[39m=\u001b[39m open_rc(\u001b[39mbin\u001b[39;49m, cv\u001b[39m.\u001b[39;49mgetStructuringElement(cv\u001b[39m.\u001b[39;49mMORPH_RECT,(kwidth,\u001b[39m1\u001b[39;49m)))\n\u001b[1;32m     18\u001b[0m contours, _ \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39mfindContours(scalebar, cv\u001b[39m.\u001b[39mRETR_EXTERNAL, cv\u001b[39m.\u001b[39mCHAIN_APPROX_SIMPLE)\n\u001b[1;32m     19\u001b[0m bar \u001b[39m=\u001b[39m contours[\u001b[39m0\u001b[39m]\n",
-      "File \u001b[0;32m/data/mole/katajisto/mitotem/src/analysis/components.py:80\u001b[0m, in \u001b[0;36mopen_rc\u001b[0;34m(img, kernel)\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39marray_equal(marker, marker_old):\n\u001b[1;32m     79\u001b[0m     marker_old \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mcopy(marker)\n\u001b[0;32m---> 80\u001b[0m     marker \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39;49mdilate(marker,kernel\u001b[39m=\u001b[39;49mse)\n\u001b[1;32m     81\u001b[0m     \u001b[39mif\u001b[39;00m binary:\n\u001b[1;32m     82\u001b[0m         marker \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39mbitwise_and(marker,mask)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "3.1814112663269043\n",
+      "(0.001326259946949602, 'micron')\n",
+      "2.9516496658325195\n"
      ]
     }
    ],
@@ -379,9 +354,8 @@
     "from src.analysis.components import detect_scale\n",
     "reader = easyocr.Reader(['en'])\n",
     "for img, _ in dataset:\n",
-    "    image = (255*img).squeeze().to(torch.uint8).numpy()\n",
     "    t = time.time()\n",
-    "    print(detect_scale(image, reader))\n",
+    "    print(detect_scale(img, reader))\n",
     "    print(time.time()-t)"
    ]
   }
