--- a/notebooks/1-unet-debug.ipynb
+++ b/notebooks/1-unet-debug.ipynb
@@ -16,10 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "5a984f0b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torch/nn/modules/lazy.py:180: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
+      "  warnings.warn('Lazy modules are a new feature under heavy development '\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -28,96 +36,96 @@
       "[ModuleList(\n",
       "  (0): EncoderBlock(\n",
       "    (convblock): Sequential(\n",
-      "      (0): Conv2d(1, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (0): Conv2d(1, 56, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (1): ReLU()\n",
-      "      (2): Conv2d(64, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (2): Conv2d(56, 56, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (3): ReLU()\n",
       "    )\n",
       "    (poolblock): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  )\n",
       "  (1): EncoderBlock(\n",
       "    (convblock): Sequential(\n",
-      "      (0): Conv2d(64, 128, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (0): Conv2d(56, 112, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (1): ReLU()\n",
-      "      (2): Conv2d(128, 128, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (2): Conv2d(112, 112, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (3): ReLU()\n",
       "    )\n",
       "    (poolblock): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  )\n",
       "  (2): EncoderBlock(\n",
       "    (convblock): Sequential(\n",
-      "      (0): Conv2d(128, 256, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (0): Conv2d(112, 224, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (1): ReLU()\n",
-      "      (2): Conv2d(256, 256, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (2): Conv2d(224, 224, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (3): ReLU()\n",
       "    )\n",
       "    (poolblock): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  )\n",
       "  (3): EncoderBlock(\n",
       "    (convblock): Sequential(\n",
-      "      (0): Conv2d(256, 512, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (0): Conv2d(224, 448, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (1): ReLU()\n",
-      "      (2): Conv2d(512, 512, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (2): Conv2d(448, 448, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (3): ReLU()\n",
       "    )\n",
       "    (poolblock): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  )\n",
       "), Sequential(\n",
-      "  (0): Conv2d(512, 1024, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (0): Conv2d(448, 896, kernel_size=(5, 5), stride=(1, 1))\n",
       "  (1): ReLU()\n",
-      "  (2): Conv2d(1024, 1024, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (2): Conv2d(896, 896, kernel_size=(5, 5), stride=(1, 1))\n",
       "  (3): ReLU()\n",
       "  (4): Dropout2d(p=0.5, inplace=False)\n",
       "), ModuleList(\n",
       "  (0): DecoderBlock(\n",
       "    (unpoolblock): Sequential(\n",
-      "      (0): ConvTranspose2d(1024, 512, kernel_size=(2, 2), stride=(2, 2))\n",
+      "      (0): ConvTranspose2d(896, 448, kernel_size=(2, 2), stride=(2, 2))\n",
       "      (1): ReLU()\n",
       "    )\n",
       "    (convblock): Sequential(\n",
-      "      (0): Conv2d(1024, 512, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (0): Conv2d(896, 448, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (1): ReLU()\n",
-      "      (2): Conv2d(512, 512, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (2): Conv2d(448, 448, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (3): ReLU()\n",
       "    )\n",
       "  )\n",
       "  (1): DecoderBlock(\n",
       "    (unpoolblock): Sequential(\n",
-      "      (0): ConvTranspose2d(512, 256, kernel_size=(2, 2), stride=(2, 2))\n",
+      "      (0): ConvTranspose2d(448, 224, kernel_size=(2, 2), stride=(2, 2))\n",
       "      (1): ReLU()\n",
       "    )\n",
       "    (convblock): Sequential(\n",
-      "      (0): Conv2d(512, 256, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (0): Conv2d(448, 224, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (1): ReLU()\n",
-      "      (2): Conv2d(256, 256, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (2): Conv2d(224, 224, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (3): ReLU()\n",
       "    )\n",
       "  )\n",
       "  (2): DecoderBlock(\n",
       "    (unpoolblock): Sequential(\n",
-      "      (0): ConvTranspose2d(256, 128, kernel_size=(2, 2), stride=(2, 2))\n",
+      "      (0): ConvTranspose2d(224, 112, kernel_size=(2, 2), stride=(2, 2))\n",
       "      (1): ReLU()\n",
       "    )\n",
       "    (convblock): Sequential(\n",
-      "      (0): Conv2d(256, 128, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (0): Conv2d(224, 112, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (1): ReLU()\n",
-      "      (2): Conv2d(128, 128, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (2): Conv2d(112, 112, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (3): ReLU()\n",
       "    )\n",
       "  )\n",
       "  (3): DecoderBlock(\n",
       "    (unpoolblock): Sequential(\n",
-      "      (0): ConvTranspose2d(128, 64, kernel_size=(2, 2), stride=(2, 2))\n",
+      "      (0): ConvTranspose2d(112, 56, kernel_size=(2, 2), stride=(2, 2))\n",
       "      (1): ReLU()\n",
       "    )\n",
       "    (convblock): Sequential(\n",
-      "      (0): Conv2d(128, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (0): Conv2d(112, 56, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (1): ReLU()\n",
-      "      (2): Conv2d(64, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+      "      (2): Conv2d(56, 56, kernel_size=(5, 5), stride=(1, 1))\n",
       "      (3): ReLU()\n",
       "    )\n",
       "  )\n",
-      "), Conv2d(64, 2, kernel_size=(1, 1), stride=(1, 1))]\n"
+      "), Conv2d(56, 2, kernel_size=(1, 1), stride=(1, 1))]\n"
      ]
     }
    ],
@@ -125,7 +133,7 @@
     "import torch\n",
     "from src.models.unet import UNet\n",
     "\n",
-    "unet = UNet(64,5)\n",
+    "unet = UNet(56,5)\n",
     "I = torch.randn((1,1,1000,1000))\n",
     "print(unet(I).shape)\n",
     "print(list(unet.children()))"
@@ -170,7 +178,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6557425150>"
+       "<matplotlib.image.AxesImage at 0x7fee513e7790>"
       ]
      },
      "execution_count": 12,
@@ -201,8 +209,8 @@
     "if src.ndim == 3:\n",
     "    src = src.unsqueeze(0)\n",
     "\n",
-    "input_size = 1004\n",
-    "output_size = 820\n",
+    "input_size = 1000\n",
+    "output_size = 632\n",
     "model = CenterCrop(output_size)\n",
     "\n",
     "k, s = input_size, output_size\n",
